<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Caller</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="loading_screen_textview1_contents">Loading Screen</string>
    <string name="button_scan_nfc">Scan NFC</string>
    <string name="title_activity_scan_nfc">ScanNFCActivity</string>
    <string name="title_activity_write_nfc">WriteNFCActivity</string>
    <string name="textViewLabel_SelectContact">Contacts With Skype Username</string>
    <string name="title_activity_register_contact">RegisterContactActivity</string>
    <string name="button_text_register_contact">Register New Contact</string>
    <string name="button_label_commit_to_google_drive">Commit To Google Drive</string>
    <string name="textview_label_write_nfc_activity">Write NFC Activity</string>
    <string name="title_activity_setup">Setup Screen</string>
    <string name="label_setup_who">Who</string>
    <string name="label_setup_with_what">With What</string>
    <string name="label_button_setup_contact">Setup New Contact</string>
    <string name="label_button_setup_device">Setup Device</string>
    <string name="label_button_setup_ibeacon">iBeacon</string>
    <string name="lavel_setup_screen">Setup Screen</string>
    <string name="action_bar_item_list">List</string>
    <string name="label_button_commit_choices">Commit Choices</string>
    <string name="label_radio_call">Call</string>
    <string name="label_radio_video_call">Video Call</string>
    <string name="label_radio_chat">Chat</string>
    <string name="label_result_who">No Contact Selected</string>
    <string name="label_result_what">No Device Synced</string>
    <string name="pick_device">Please Select Device</string>
    <string name="pick_action">Please Select an Action to Perform</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_toggle_nfc_scanning">Toggle NFC Scanning</string>
    <string name="label_nfc_toggle_button">ToggleButton</string>
    <string name="label_toggle_ibeacon_scanning">Toggle IBeacon Scanning</string>
    <string name="label_ibeacon_toggle_button">ToggleButton</string>
    <string name="title_activity_bluetoot">BlueTooth LE Scanner</string>
    <string name="buttonScan">StartScan</string>
    <string name="textviewReportScan">Scan Results</string>
    <string name="buttonContinueScan">Continue</string>
    <string name="title_activity_bluetooth">Bluetooth Activity</string>
    <string name="title_activity_bluetooth_le">BluetoothLEActivity</string>
    <string name="label_button_bluetooth_continue">Continue</string>
    <string name="title_activity_sensor_base">SensorBaseActivity</string>
    <string name="label_bluetooth_sensitivity">BlueTooth LE Tracking Distance</string>

</resources>
